now that Taj has moved his experimental code, we're free to use AUTOMOC ;)

--- a/kview/Makefile.am
+++ b/kview/Makefile.am
@@ -4,9 +4,7 @@ bin_PROGRAMS= kview
 #CORBA_SRC = kmicoapp.h kmicoapp.cpp
 CORBA_SRC=
 
-BUILT_SOURCES =  moc_canvas.cpp moc_filter.cpp moc_filtmenu.cpp moc_ilistdlg.cpp moc_kview.cpp moc_prefdlg.cpp moc_viewer.cpp moc_kaccelmenuwatch.cpp
-
-DISTCLEANFILES = $(BUILT_SOURCES)
+kview_METASOURCES = USE_AUTOMOC
 
 INCLUDES = $(all_includes) -I/usr/local/mico/include -I$(srcdir)/layout
 kview_SOURCES = canvas.cpp kview.cpp main.cpp \
@@ -15,7 +13,7 @@ kview_SOURCES = canvas.cpp kview.cpp main.cpp \
 	colour.h colour.cpp filtmenu.h filtmenu.cpp ilistdlg.h ilistdlg.cpp \
 	numdlg.h numdlg.cpp kcproc.h kcproc.cpp khelpidx.h khelpidx.cpp \
 	prefdlg.h prefdlg.cpp kaccelmenuwatch.h kaccelmenuwatch.cpp \
-	$(CORBA_SRC) $(BUILT_SOURCES)
+	$(CORBA_SRC) 
 
 lnkdir = $(kde_appsdir)/Graphics
 lnk_DATA = kview.kdelnk
@@ -41,32 +39,5 @@ srcdoc:
 	kdoc -a -p -H -d $(HOME)/web/src/kview kview *.h -lqt -lkdecore -lkdeui -lkfile 
 
 ###KMAKE-start (don't edit or delete this block)
-
-moc_canvas.cpp: canvas.h
-	$(MOC) $(srcdir)/canvas.h -o moc_canvas.cpp
-
-moc_filter.cpp: filter.h
-	$(MOC) $(srcdir)/filter.h -o moc_filter.cpp
-
-moc_filtmenu.cpp: filtmenu.h
-	$(MOC) $(srcdir)/filtmenu.h -o moc_filtmenu.cpp
-
-moc_ilistdlg.cpp: ilistdlg.h
-	$(MOC) $(srcdir)/ilistdlg.h -o moc_ilistdlg.cpp
-
-moc_kmicoapp.cpp: kmicoapp.h
-	$(MOC) $(srcdir)/kmicoapp.h -o moc_kmicoapp.cpp
-
-moc_kview.cpp: kview.h
-	$(MOC) $(srcdir)/kview.h -o moc_kview.cpp
-
-moc_prefdlg.cpp: prefdlg.h
-	$(MOC) $(srcdir)/prefdlg.h -o moc_prefdlg.cpp
-
-moc_viewer.cpp: viewer.h
-	$(MOC) $(srcdir)/viewer.h -o moc_viewer.cpp
-
-moc_kaccelmenuwatch.cpp: kaccelmenuwatch.h
-	$(MOC) $(srcdir)/kaccelmenuwatch.h -o moc_kaccelmenuwatch.cpp
 
 ###KMAKE-end
