converted to automake 1.4. automake 1.3 won't work anymore. Sorry, but automake 1.4 changed incompatible to 1.3 ;(

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ## kdegraphics/Makefile.am $Id$
 ## (C) 1997 Stephan Kulow
 
-AUTOMAKE_OPTIONS = foreign 
+AUTOMAKE_OPTIONS = foreign 1.4
 SUBDIRS = $(TOPSUBDIRS)
 DISTCLEANFILES = inst-apps
 
