put the build back in source (almost)

--- a/debian/menu.in
+++ b/debian/menu.in
@@ -4,3 +4,5 @@ kghostview x11 Apps/Viewers
 kfax x11 Apps/Graphics
 kpaint x11 Apps/Graphics
 kfract x11 Apps/Math
+kiconedit x11 SECTION
+ksnapshot x11 SECTION
