--- a/debian/rules
+++ b/debian/rules
@@ -2,31 +2,33 @@
 # Made with the aid of debmake, by Christoph Lameter,
 # based on the sample debian/rules file for GNU hello by Ian Jackson.
 
-BUILDDIR = ../build_kdegraphics
+BUILDDIR = ./build
 
-build: $(BUILDDIR)/build
+build: $(BUILDDIR)/build-stamp
 
-$(BUILDDIR)/build:
+$(BUILDDIR)/build-stamp:
 	dh_testdir
 	if test ! -f configure; then \
 	  $(MAKE) -f admin/Makefile.common ;\
 	fi 
-	pwd=`pwd` ;\
 	test -d $(BUILDDIR) || mkdir $(BUILDDIR) ;\
 	cd $(BUILDDIR) ;\
 	CFLAGS="-O2 -g -Wall" \
 	 CXXFLAGS="-O2 -g -Wall" \
-	$$pwd/configure --enable-debug --with-install-root=`pwd`/debian/tmp \
-	--disable-rpath && make
+	../configure --enable-debug --with-install-root=`pwd`/../debian/tmp \
+	--disable-rpath 
+	
+	make -C $(BUILDDIR)
 
-	touch $(BUILDDIR)/build
+	touch $(BUILDDIR)/build-stamp
 
 clean: debian-clean
 	-rm -rf $(BUILDDIR)
+	dh_clean -k
 
 debian-clean:
 	dh_testdir
-	-rm -f $(BUILDDIR)/build
+	-rm -f $(BUILDDIR)/build-stamp
 
 binary-indep:	 build
 	dh_testroot
@@ -39,12 +41,7 @@ binary-arch: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	rm -rf $(BUILDDIR)/debian
-	cp -ra debian $(BUILDDIR)/debian
-	(cd $(BUILDDIR) && $(MAKE) -f debian/rules binary-arch2)
-
-binary-arch2:
-	make install 
+	make -C $(BUILDDIR) install 
 	perl -w debian/kderules
 	dh_movefiles
 	dh_undocumented `cat debian/man-pages`
