--- a/debian/menu.in
+++ b/debian/menu.in
@@ -4,5 +4,5 @@ kghostview x11 Apps/Viewers
 kfax x11 Apps/Graphics
 kpaint x11 Apps/Graphics
 kfract x11 Apps/Math
-kiconedit x11 SECTION
-ksnapshot x11 SECTION
+kiconedit x11 Apps/Graphics
+ksnapshot x11 Apps/Graphics
