--- a/po/es/Makefile.am
+++ b/po/es/Makefile.am
@@ -1,7 +1,7 @@
 
 # This has to be set. The rest should be reusable
 GMOFILES = kghostview.gmo kpaint.gmo kdvi.gmo kfax.gmo kview.gmo \
-	   ksnapshot.gmo
+	   ksnapshot.gmo kfract.gmo kiconedit.gmo
 POFILES = $(GMOFILES:.gmo=.po)
 
 LANG = es
