--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ $(BUILDDIR)/build-stamp:
 	CFLAGS="-O2 -g -Wall" \
 	 CXXFLAGS="-O2 -g -Wall" \
 	../configure --enable-debug --with-install-root=`pwd`/../debian/tmp \
-	--disable-rpath 
+	--disable-rpath --prefix=/usr
 	
 	make -C $(BUILDDIR)
 
