[IEM] fixing a few build issues and adding undocumented man-pages

--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,7 @@ $(BUILDDIR)/build-stamp:
 	  $(MAKE) -f admin/Makefile.common ;\
 	fi 
 	test -d $(BUILDDIR) || mkdir $(BUILDDIR) ;\
+	cp -R po $(BUILDDIR) ;\
 	cd $(BUILDDIR) ;\
 	CFLAGS="-O2 -g -Wall" \
 	 CXXFLAGS="-O2 -g -Wall" \
@@ -44,7 +45,7 @@ binary-arch: build
 	make -C $(BUILDDIR) install 
 	perl -w debian/kderules
 	dh_movefiles
-	dh_undocumented 
+	dh_undocumented `cat debian/man-pages`
 	dh_installdocs
 	dh_installmenu
 	dh_installchangelogs
