--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Standards-Version: 2.5.0
 
 Package: kdegraphics
 Architecture: any
-Depends: ${shlibs:Depends}, kdebase
+Depends: ${shlibs:Depends}
+Suggests: kdebase
 Description: KDE collection of graphics programs.
  This collections includes kfax kfract kghostview kpaint kview and kdvi
