[IEM] 0 lintian errors/warnings
Updated changelog
Changed section from contrib/x11 to contrib/graphics
Changed from kderules to debianrules

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: kdegraphics
-Section: contrib/x11
+Section: contrib/graphics
 Priority: extra
 Maintainer: Stephan Kulow <coolo@kde.org>
 Standards-Version: 2.5.0
