[IEM] One big swoop through all the packages.
    * Updated changelog
    * Went through every rules/post*/control script verifying everything
    * Fixed several small (reported) bugs with kdm/kdebase post scripts
    * verified all dependencies

--- a/debian/rules
+++ b/debian/rules
@@ -28,6 +28,7 @@ clean: debian-clean
 	-rm -f debian/files
 	-rm -f debian/menu
 	-rm -f debian/substvars
+	-rm -f debian/mailcap
 	-rm -f configure
 	dh_clean -k
 
