--- a/debian/menu.in
+++ b/debian/menu.in
@@ -1,8 +1,8 @@
-kview x11 Apps/Viewers
-kdvi x11 Apps/Viewers
-kghostview x11 Apps/Viewers
-kfax x11 Apps/Graphics
-kpaint x11 Apps/Graphics
-kfract x11 Apps/Math
-kiconedit x11 Apps/Graphics
-ksnapshot x11 Apps/Graphics
+kview x11 Apps/KDE/Viewers
+kdvi x11 Apps/KDE/Viewers
+kghostview x11 Apps/KDE/Viewers
+kfax x11 Apps/KDE/Graphics
+kpaint x11 Apps/KDE/Graphics
+kfract x11 Apps/KDE/Math
+kiconedit x11 Apps/KDE/Graphics
+ksnapshot x11 Apps/KDE/Graphics
