*************************************************************      *   Yet Again!  the $(mkinstalldirs) $kde_icondir/large     *      *   was omitted !!!                                         *      *  This ALWAYS needs to be added to the Makefile.am         *      *  when the new large icons are added !!!                   *      *************************************************************
(fixed)   duncan@kde.org

--- a/kview/Makefile.am
+++ b/kview/Makefile.am
@@ -29,6 +29,7 @@ install-data-local:
 	$(mkinstalldirs) $(kde_minidir)
 	$(INSTALL_DATA) $(srcdir)/mini-kview.xpm $(kde_minidir)/kview.xpm
 	$(mkinstalldirs) $(kde_icondir)
+	$(mkinstalldirs) $(kde_icondir)/large
 	$(INSTALL_DATA) $(srcdir)/large-kview.xpm $(kde_icondir)/large/kview.xpm
 
 uninstall-local:
