--- a/kpaint/toolpics/CMakeLists.txt
+++ b/kpaint/toolpics/CMakeLists.txt
@@ -1,16 +1,20 @@
-install_icon(circle.xpm "${KDE1_TOOLBARDIR}")
-install_icon(areaselect.xpm "${KDE1_TOOLBARDIR}")
-install_icon(line.xpm "${KDE1_TOOLBARDIR}")
-install_icon(pen.xpm "${KDE1_TOOLBARDIR}")
-install_icon(spraycan.xpm "${KDE1_TOOLBARDIR}")
-install_icon(ellipse.xpm "${KDE1_TOOLBARDIR}")
-install_icon(rectangle.xpm "${KDE1_TOOLBARDIR}")
-install_icon(roundangle.xpm "${KDE1_TOOLBARDIR}")
-install_icon(editpaste.xpm "${KDE1_TOOLBARDIR}")
-install_icon(filenew.xpm "${KDE1_TOOLBARDIR}")
-install_icon(editcopy.xpm "${KDE1_TOOLBARDIR}")
-install_icon(fileopen.xpm "${KDE1_TOOLBARDIR}")
-install_icon(editcut.xpm "${KDE1_TOOLBARDIR}")
-install_icon(filefloppy.xpm "${KDE1_TOOLBARDIR}")
-install_icon(viewmag+.xpm "${KDE1_TOOLBARDIR}")
-install_icon(viewmag-.xpm"${KDE1_TOOLBARDIR}")
+install(FILES
+        circle.xpm
+        areaselect.xpm
+        line.xpm
+        pen.xpm
+        spraycan.xpm
+        ellipse.xpm
+        rectangle.xpm
+        roundangle.xpm
+    DESTINATION "${KDE1_TOOLBARDIR}")
+
+# Installed by kdelibs
+#install_icon(editpaste.xpm "${KDE1_TOOLBARDIR}")
+#install_icon(filenew.xpm "${KDE1_TOOLBARDIR}")
+#install_icon(editcopy.xpm "${KDE1_TOOLBARDIR}")
+#install_icon(fileopen.xpm "${KDE1_TOOLBARDIR}")
+#install_icon(editcut.xpm "${KDE1_TOOLBARDIR}")
+#install_icon(filefloppy.xpm "${KDE1_TOOLBARDIR}")
+#install_icon(viewmag+.xpm "${KDE1_TOOLBARDIR}")
+#install_icon(viewmag-.xpm"${KDE1_TOOLBARDIR}")
