fix kview build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,6 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 #add_subdirectory(bsd-port)
 add_subdirectory(kpaint)
+add_subdirectory(kview)
 
 #add_subdirectory(po)
