--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,6 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_subdirectory(kpaint)
 add_subdirectory(kview)
 add_subdirectory(kfract)
+add_subdirectory(kiconedit)
 
 #add_subdirectory(po)
